--- a/.github/workflows/gradlepublish.yml
+++ b/.github/workflows/gradlepublish.yml
@@ -24,7 +24,5 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: gradle build
-    - name: Report
-      run: ./gradlew jacocoTestReport
-    - name: Codecov
-      uses: codecov/codecov-action@v1.0.6
+    - name: Test
+      run: ./gradlew test
