--- a/.github/workflows/gradlepublish.yml
+++ b/.github/workflows/gradlepublish.yml
@@ -21,8 +21,9 @@ jobs:
       with:
         java-version: 1.8
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: gradle build
+      run: |
+          chmod +x gradlew
+          chmod 755 /home/runner/work/selen/selen/resources/geckodriver
+          chmod 755 /home/runner/work/selen/selen/resources/chromedriver
     - name: Test
-      run: ./gradlew test
+      run: ./gradlew test -i
